--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: List files in repository (Debugging)
+        run: ls -R
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
@@ -34,7 +37,7 @@ jobs:
     steps:
       - name: Run Tests
         run: |
-          docker-compose up -d
+          docker compose up -d
           sleep 10
           docker-compose exec web pytest tests/
 
@@ -44,4 +47,5 @@ jobs:
       - name: Notify if tests fail
         if: failure()
         run: |
-          python3 src/mail.py "Nightly Build Failed" "Your nightly build has failed. Please check logs." "bryana.fay71@ethereal.email"
+          chmod +x ./src/mail.py
+          python3 ./src/mail.py "Nightly Build Failed" "Your nightly build has failed. Please check logs." "bryana.fay71@ethereal.email"
