--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "DATABASE_URL=postgresql://postgres:testpass@db:5432/bookly" >> .env
+          echo "DATABASE_URL=postgresql+asyncpg://postgres:testpass@db:5432/bookly" >> .env
           echo "JWT_SECRET=NMM3S-MBAVTGWggt0ISI_3NY9eebmMBBSi4hR_rwKko" >> .env
           echo "JWT_ALGORITHM=HS256" >> .env
           echo "REDIS_URL=redis://redis:6379/0" >> .env
@@ -49,19 +49,27 @@ jobs:
           echo "MAIL_FROM_NAME=BryanaFay" >> .env
           echo "DOMAIN=http://localhost:8000" >> .env
 
-      - name: Print environment variables (Debugging)
+      - name: Print .env file (Debugging)
         run: cat .env
 
-      - name: Run Tests
+      - name: Build and Start Services
         run: |
+          docker compose build
           docker compose up -d
           sleep 10
           docker compose ps
-          docker compose exec web pytest tests/
 
       - name: Debug Web Container Logs
         if: failure()
         run: docker compose logs web
+
+      - name: Run Tests
+        run: |
+          docker compose exec web pytest tests/
+
+      - name: Debug Celery Worker Logs
+        if: failure()
+        run: docker compose logs celery
 
       - name: Check if mail.py exists
         run: |
