modify email info2

--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -72,10 +72,10 @@ jobs:
 
       - name: Notify Build Result
         env:
-          SMTP_SERVER: ${{ secrets.MAIL_SERVER }}
-          SMTP_PORT: ${{ secrets.MAIL_PORT }}
-          SMTP_USERNAME: ${{ secrets.MAIL_USERNAME }}
-          SMTP_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+          MAIL_SERVER: ${{ secrets.MAIL_SERVER }}
+          MAIL_PORT: ${{ secrets.MAIL_PORT }}
+          MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
           MAIL_FROM: ${{ secrets.MAIL_FROM }}
         run: |
           chmod +x src/mail.py
