--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -58,6 +58,7 @@ jobs:
           docker compose up -d
           sleep 10
           docker compose ps
+          exit 1
 
       - name: Debug All Containers Logs (if failed)
         if: failure()
