--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -80,6 +80,7 @@ jobs:
           echo "MAIL_FROM=${{ secrets.MAIL_FROM }}"
 
       - name: Notify Build Result
+        if: failure()
         env:
           MAIL_SERVER: ${{ secrets.MAIL_SERVER }}
           MAIL_PORT: ${{ secrets.MAIL_PORT }}
