--- a/.github/workflows/nightly_build.yml
+++ b/.github/workflows/nightly_build.yml
@@ -6,30 +6,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t shuqingzou/fastapi-app:latest .
-          docker push shuqingzou/fastapi-app:latest
-
   tests:
     runs-on: ubuntu-latest
-    needs: build-and-push
 
     steps:
       - name: Checkout Repository
@@ -58,7 +36,11 @@ jobs:
           docker compose up -d
           sleep 10
           docker compose ps
-          exit 1
+
+      - name: Verify Web Service is Running
+        run: |
+          sleep 5
+          curl --fail http://localhost:8000/ || exit 1
 
       - name: Debug All Containers Logs (if failed)
         if: failure()
@@ -70,7 +52,7 @@ jobs:
             echo "Error: src/mail.py not found!"
             exit 1
           fi
-          
+
       - name: Debug Environment Variables (Check SMTP Config)
         run: |
           echo "MAIL_SERVER=${{ secrets.MAIL_SERVER }}"
@@ -80,7 +62,7 @@ jobs:
           echo "MAIL_FROM=${{ secrets.MAIL_FROM }}"
 
       - name: Notify Build Result
-        if: failure()
+        if: always()
         env:
           MAIL_SERVER: ${{ secrets.MAIL_SERVER }}
           MAIL_PORT: ${{ secrets.MAIL_PORT }}
@@ -94,3 +76,26 @@ jobs:
           else
             python3 src/mail.py "Nightly Build Failed" "The build and start process failed. Please check logs." "bryana.fay71@ethereal.email"
           fi
+          
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: tests
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t shuqingzou/fastapi-app:latest .
+          docker push shuqingzou/fastapi-app:latest
